# internal/app/dto/mappers/edge_mappers.go
@@ -1,8 +1,6 @@
 package mappers
 
 import (
-	"fmt"
-
 	"github.com/bmstu-itstech/itsreg/internal/app/dto"
 	"github.com/bmstu-itstech/itsreg/internal/domain/bots"
 )
@@ -29,24 +27,6 @@ func edgeFromDTO(d dto.Edge) (bots.Edge, error) {
 		return bots.Edge{}, vErr
 	}
 	return bots.NewEdge(pred, to, oper), nil
-}
-
-func edgesFromDTOPrefixed(prefix string, ds []dto.Edge) ([]bots.Edge, error) {
-	var vErr bots.ValidationError
-
-	edges := make([]bots.Edge, len(ds))
-	for i, d := range ds {
-		edge, err := edgeFromDTO(d)
-		if err != nil {
-			vErr = vErr.AppendPrefixed(err, fmt.Sprintf("%s[%d]", prefix, i))
-		}
-		edges[i] = edge
-	}
-
-	if vErr.OrError() != nil {
-		return nil, vErr
-	}
-	return edges, nil
 }
 
 func edgeToDTO(e bots.Edge) dto.Edge {
